Issue #49: Align style closer to branding of openshift.io

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,12 +1,13 @@
-$color-pf-light-blue-300: #35caed;
-$color-pf-light-blue-500: #008bad;
+$color-pf-light-blue-300: #040404;
+$color-pf-light-blue-500: #3C8FC9;
+$text-color: #ddd;
 
 footer {
-  border-top: 1px solid $color-pf-light-blue-300;
+  background-color: $color-pf-light-blue-300;
   font-size: 10px;
   line-height: 15px;
-  padding-bottom: 28px;
-  padding-top: 28px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   width: 100%;
 }
 
@@ -14,22 +15,20 @@ footer .row {
   margin: 0;
 }
 
-footer #logo-redhat {
-  background: url(../../assets/img/redhat.svg) no-repeat;
-  float: left;
-  height: 34px;
-  margin: -3px 30px 0 0;
-  text-indent: -9999px;
-  width: 106px;
-}
-
-footer #logo-jbossforge {
-  background: url(../../assets/img/forge_powered.png) no-repeat;
-  float: left;
-  height: 75px;
-  margin: -3px 30px 0 0;
-  text-indent: -9999px;
-  width: 106px;
+footer .links {
+  clear: left;
+  list-style: none;
+  margin: 20px 0 0;
+  padding: 0;
+  li {
+    display: inline-block;
+    padding-left: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    a {
+      color: $text-color;
+    }
+  }
 }
 
 footer .social {
@@ -37,13 +36,15 @@ footer .social {
   list-style: none;
   margin: 15px 0 0;
   padding: 0;
-}
-
-footer .social li {
+  li {
     display: inline-block;
-}
-
-footer .social li a {
-  color: $color-pf-light-blue-500;
-  font-size: 26px;
+    padding-left: 40px;
+  }
+  a {
+    :hover {
+      color: $color-pf-light-blue-500;
+    }
+    color: $text-color;
+    font-size: 20px;
+  }
 }
